internal/kgateway/extensions2/plugins/waypoint/testdata/input/authz-gateway-ref-fakegw.yaml
---
# The Namespace capture should apply to all the Services in the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    istio.io/use-waypoint: example-waypoint
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-waypoint
  namespace: infra
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: infra
spec:
  clusterIP: 1.1.1.1
  ports:
  - port: 5000
    name: http
  selector:
    app: svc-b
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: infra
spec:
  clusterIP: 2.2.2.2
  ports:
  - port: 9000
    name: http
  selector:
    app: svc-b
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: infra
  labels:
    istio.io/use-waypoint: example-waypoint
spec:
  clusterIP: 1.2.3.4
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld    
---
# We should get a filter chain with no deny filters
# because the fake gateway does not exist
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-gateway-ref
  namespace: infra
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: fake-waypoint
