internal/kgateway/extensions2/plugins/waypoint/testdata/input/authz-gatewayclass-ref-nonrootns.yaml
---
# The Namespace capture should apply to all the Services in the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    istio.io/use-waypoint: example-waypoint
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-waypoint
  namespace: infra
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: infra
spec:
  clusterIP: 1.1.1.1
  ports:
  - port: 5000
    name: http
  selector:
    app: svc-b
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: infra
spec:
  clusterIP: 2.2.2.2
  ports:
  - port: 9000
    name: http
  selector:
    app: svc-b
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: infra
  labels:
    istio.io/use-waypoint: example-waypoint
spec:
  clusterIP: 1.2.3.4
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld    
---
# We should get a filter chain with 0 filters that reflect this policy
# where gatewayclass is not in istio-system namespace (whch is rootnamespace by default)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authz-gatewayclass-ref
  namespace: kgateway-system
spec:
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        ports: ["8080"]
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: GatewayClass
    name: kgateway-waypoint
