internal/kgateway/extensions2/plugins/waypoint/testdata/input/ns-use-waypoint.yaml
---
# The Namespace capture should apply to all the Services in the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    istio.io/use-waypoint: example-waypoint
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-waypoint
  namespace: infra
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: infra
spec:
  clusterIP: 1.1.1.1
  ports:
  - port: 5000
    name: http
  selector:
    app: svc-b
---
# we should get a filter chain with a default virtualhost that just
# sends traffic to the corresponding `kube` Service backend
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: infra
spec:
  clusterIP: 2.2.2.2
  ports:
  - port: 9000
    name: http
  selector:
    app: svc-b
---
# TODO headless services aren't supported so this won't have a corresponding
# filter chain in the output xDS
apiVersion: v1
kind: Service
metadata:
  name: helloworld-headless
  namespace: infra
spec:
  clusterIP: None
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
---
